--- a/index.html
+++ b/index.html
@@ -27,12 +27,26 @@
 
 <body>
   <header>
-    <a href="#" class="logo">logo</a>
-    <div>
-      <ul>
+    <a href="#" class="logo">ggvhcs</a>
+    <div class="navigation">
+      <ul class="menu">
         <li class="menu-item"><a href="#">Home</a></li>
-        <li class="menu-item"><a href="#">DropDown<i class="fas fa-angle-down"></i></a></li>
-        <li class="menu-item"><a href="#">SubDropDown<i class="fas fa-angle-down"></i></a></li>
+        <li class="menu-item">
+          <a class="sub-btn" href="#">DropDown<i class="fas fa-angle-down"></i></a>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="#">Sub Item 1</a></li>
+            <li class="sub-item"><a href="#">Sub Item 2</a></li>
+            <li class="sub-item"><a href="#">Sub Item 3</a></li>
+          </ul>
+        </li>
+        <li class="menu-item">
+          <a class="sub-btn" href="#">SubDropDown<i class="fas fa-angle-down"></i></a>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="#">Sub Item 1</a></li>
+            <li class="sub-item"><a href="#">Sub Item 2</a></li>
+            <li class="sub-item"><a href="#">Sub Item 3</a></li>
+          </ul>
+        </li>
         <li class="menu-item"><a href="#">About</a></li>
         <li class="menu-item"><a href="#">Contact</a></li>
       </ul>
