--- a/index.html
+++ b/index.html
@@ -47,8 +47,17 @@
             <li class="sub-item"><a href="#">Sub Item 3</a></li>
           </ul>
         </li>
+        <!-- /*** ABOUT ***/ -->
         <li class="menu-item"><a href="#">About</a></li>
-        <li class="menu-item"><a href="#">Contact</a></li>
+        <!-- /*** CONTAC ***/ -->
+        <li class="menu-item">
+          <a class="sub-btn" href="#">Contact<i class="fas fa-angle-down"></i></a>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="#">Sub Item 1</a></li>
+            <li class="sub-item"><a href="#">Sub Item 2</a></li>
+            <li class="sub-item"><a href="#">Sub Item 3</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
   </header>
