--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <li class="menu-item"><a href="#">Home</a></li>
         <li class="menu-item">
           <a class="sub-btn" href="#">DropDown<i class="fas fa-angle-down"></i></a>
-          <!-- <ul class="sub-menu">
+          <ul class="sub-menu">
             <li class="sub-item"><a href="#">Sub Item 1</a></li>
             <li class="sub-item"><a href="#">Sub Item 2</a></li>
             <li class="sub-item"><a href="#">Sub Item 3</a></li>
-          </ul> -->
+          </ul>
         </li>
         <li class="menu-item">
           <a class="sub-btn" href="#">SubDropDown<i class="fas fa-angle-down"></i></a>
