--- a/index.html
+++ b/index.html
@@ -45,13 +45,21 @@
             <li class="sub-item"><a href="#">Sub Item 1</a></li>
             <li class="sub-item"><a href="#">Sub Item 2</a></li>
             <li class="sub-item"><a href="#">Sub Item 3</a></li>
+            <li class="sub-item more">
+              <a class="more-btn" href="#">More<i class="fas fa-angle-down"></i></a>
+              <ul class="more-menu">
+                <li class="more-item"><a href="#">More Item 1</a></li>
+                <li class="more-item"><a href="#">More Item 2</a></li>
+                <li class="more-item"><a href="#">More Item 3</a></li>
+              </ul>
+            </li>
           </ul>
         </li>
         <!-- /*** ABOUT ***/ -->
         <li class="menu-item"><a href="#">About</a></li>
         <!-- /*** CONTAC ***/ -->
         <li class="menu-item">
-          <a class="sub-btn" href="#">Contact<i class="fas fa-angle-down"></i></a>
+          <a class="sub-btn" href="#">Contact</a>
           <!-- <ul class="sub-menu">
             <li class="sub-item"><a href="#">Sub Item 1</a></li>
             <li class="sub-item"><a href="#">Sub Item 2</a></li>
