--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
       </ul>
     </div>
   </header>
+
+  <script type="text/javascript">
+  //toggle dropdown menus.
+  $(document).ready(function(){
+    //toggle sub-menus.
+    $(".sub-btn").click(function(){
+      $(this).next(".sub-menu").slideToggle();
+    })
+  });
+  </script>
 </body>
 
 </html>
