--- a/index.html
+++ b/index.html
@@ -19,33 +19,58 @@
 </head>
 
 <body>
+
   <header>
+
     <a href="#" class="logo">ggvhcs</a>
+
     <div class="navigation">
       <ul class="menu">
         <li class="menu-item"><a href="#">Home</a></li>
         <li class="menu-item">
-          <a class="sub-btn" href="#">DropDown<i class="fas fa-angle-down"></i></a>
+          <a class="sub-btn" href="#">Linux<i class="fas fa-angle-down"></i></a>
           <ul class="sub-menu">
-            <li class="sub-item"><a href="#">Sub Item 1</a></li>
-            <li class="sub-item"><a href="#">Sub Item 2</a></li>
-            <li class="sub-item"><a href="#">Sub Item 3</a></li>
+            <li class="sub-item">
+              <a class="sub-btn" href="#">commands</a>
+              <ul class="sub-menu">
+                <li class="sub-item"><a href="#">bash</a></li>
+                <li class="sub-item"><a href="#">cron-jobs</a></li>
+                <li class="sub-item"><a href="#">atd-jobs</a></li>
+                <li class="sub-item"><a href="#">date-and-time</a></li>
+              </ul>
+            </li>
+            <li class="sub-item">
+              <a class="sub-btn" href="#">services</a>
+              <ul class="sub-menu">
+                <li class="sub-item"><a href="#">email</a></li>
+                <li class="sub-item"><a href="#">proxy</a></li>
+                <li class="sub-item"><a href="#">cloud</a></li>
+                <li class="sub-item"><a href="#">dns</a></li>
+              </ul>
+            </li>
           </ul>
         </li>
         <li class="menu-item">
-          <a class="sub-btn" href="#">SubDropDown<i class="fas fa-angle-down"></i></a>
+          <a class="sub-btn" href="#">Docker<i class="fas fa-angle-down"></i></a>
           <ul class="sub-menu">
-            <li class="sub-item"><a href="#">Sub Item 1</a></li>
-            <li class="sub-item"><a href="#">Sub Item 2</a></li>
-            <li class="sub-item"><a href="#">Sub Item 3</a></li>
-            <li class="sub-item more">
-              <a class="more-btn" href="#">More<i class="fas fa-angle-down"></i></a>
-              <ul class="more-menu">
-                <li class="more-item"><a href="#">More Item 1</a></li>
-                <li class="more-item"><a href="#">More Item 2</a></li>
-                <li class="more-item"><a href="#">More Item 3</a></li>
-              </ul>
-            </li>
+            <li class="sub-item"><a href="#">containers</a></li>
+            <li class="sub-item"><a href="#">images</a></li>
+            <li class="sub-item"><a href="#">docker-compose</a></li>
+            <li class="sub-item"><a href="#">kubernete</a></li>
+          </ul>
+        </li>
+        <li class="menu-item">
+          <a class="sub-btn" href="#">DevPos<i class="fas fa-angle-down"></i></a>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="#">ansible</a></li>
+          </ul>
+        </li>
+        <li class="menu-item">
+          <a class="sub-btn" href="#">Develop<i class="fas fa-angle-down"></i></a>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="#">javascript</a></li>
+            <li class="sub-item"><a href="#">react-js</a></li>
+            <li class="sub-item"><a href="#">react-native</a></li>
           </ul>
         </li>
         <!-- /*** ABOUT ***/ -->
@@ -67,6 +92,7 @@
     })
   });
   </script>
+
 </body>
 
 </html>
