--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <ul class="menu">
         <li class="menu-item"><a href="#">Home</a></li>
         <li class="menu-item">
+          <!-- /*** LINUX ***/ -->
           <a class="sub-btn" href="#">Linux<i class="fas fa-angle-down"></i></a>
           <ul class="sub-menu">
             <li class="sub-item">
@@ -51,6 +52,7 @@
           </ul>
         </li>
         <li class="menu-item">
+          <!-- /*** DOCKER ***/ -->
           <a class="sub-btn" href="#">Docker<i class="fas fa-angle-down"></i></a>
           <ul class="sub-menu">
             <li class="sub-item"><a href="#">containers</a></li>
@@ -60,12 +62,14 @@
           </ul>
         </li>
         <li class="menu-item">
+          <!-- /*** DEVPOS ***/ -->
           <a class="sub-btn" href="#">DevPos<i class="fas fa-angle-down"></i></a>
           <ul class="sub-menu">
             <li class="sub-item"><a href="#">ansible</a></li>
           </ul>
         </li>
         <li class="menu-item">
+          <!-- /*** DEVELOP ***/ -->
           <a class="sub-btn" href="#">Develop<i class="fas fa-angle-down"></i></a>
           <ul class="sub-menu">
             <li class="sub-item"><a href="#">javascript</a></li>
@@ -84,13 +88,13 @@
   </header>
 
   <script type="text/javascript">
-  //toggle dropdown menus.
-  $(document).ready(function(){
-    //toggle sub-menus.
-    $(".sub-btn").click(function(){
-      $(this).next(".sub-menu").slideToggle();
-    })
-  });
+    //
+    $(document).ready(function () {
+      //
+      $(".sub-btn").click(function () {
+        $(this).next(".sub-menu").slideToggle();
+      })
+    });
   </script>
 
 </body>
