--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="sub-btn" href="#">Linux<i class="fas fa-angle-down"></i></a>
           <ul class="sub-menu">
             <li class="sub-item">
-              <a class="sub-btn" href="#">commands</a>
+              <a class="sub-btn" href="#">commands<i class="fas fa-angle-down"></i></a>
               <ul class="sub-menu">
                 <li class="sub-item"><a href="#">bash</a></li>
                 <li class="sub-item"><a href="#">cron-jobs</a></li>
@@ -41,7 +41,7 @@
               </ul>
             </li>
             <li class="sub-item">
-              <a class="sub-btn" href="#">services</a>
+              <a class="sub-btn" href="#">services<i class="fas fa-angle-down"></i></a>
               <ul class="sub-menu">
                 <li class="sub-item"><a href="#">email</a></li>
                 <li class="sub-item"><a href="#">proxy</a></li>
