--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <!-- Required meta tags -->
+  <!-- required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Mine CSS -->
+  <!-- mine css -->
   <link href="main.css" rel="stylesheet">
 
   <!-- font-awesome -->
@@ -30,7 +30,21 @@
         <li class="menu-item">
           <!-- /*** LINUX ***/ -->
           <a class="sub-btn" href="#">Linux<i class="fas fa-angle-down"></i></a>
+          <a class="sub-btn" href="#">commands<i class="fas fa-angle-right"></i></a>
           <ul class="sub-menu">
+            <li class="sub-item"><a href="#">bash</a></li>
+            <li class="sub-item"><a href="#">cron-jobs</a></li>
+            <li class="sub-item"><a href="#">atd-jobs</a></li>
+            <li class="sub-item"><a href="#">date-and-time</a></li>
+          </ul>
+          <a class="sub-btn" href="#">services<i class="fas fa-angle-right"></i></a>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="#">email</a></li>
+            <li class="sub-item"><a href="#">proxy</a></li>
+            <li class="sub-item"><a href="#">cloud</a></li>
+            <li class="sub-item"><a href="#">dns</a></li>
+          </ul>
+          <!-- /*<ul class="sub-menu">
             <li class="sub-item">
               <a class="sub-btn" href="#">commands<i class="fas fa-angle-down"></i></a>
               <ul class="sub-menu">
@@ -49,7 +63,7 @@
                 <li class="sub-item"><a href="#">dns</a></li>
               </ul>
             </li>
-          </ul>
+          </ul>*/ -->
         </li>
         <li class="menu-item">
           <!-- /*** DOCKER ***/ -->
